--- a/workflow/notebooks/variants-over-time.Rmd
+++ b/workflow/notebooks/variants-over-time.Rmd
@@ -110,9 +110,9 @@ I'll use the filters that we determine in the previous notebook.
 ```{r Filter Variants, echo=TRUE}
 
 # Try some more stringent filters
-min.obsv = 100
-min.bias = .85
-min.freq = 0.03
+min.obsv = 25
+min.bias = .9
+min.freq = 0.02
 
 # Get the SNPs that are in primer stretches 
 snps.in.primers = merged.df %>% 
@@ -330,7 +330,7 @@ ggsave(paste(figures.dir, "cage_19_aerosol_v_direct.png", sep=""), width = 16, h
 
 Connect the stock to the donor and donor to the contact. Filter for things that are in stock, donor, and contact. 
 
-```{r Summarized Variants}
+```{r Summarized Variants, fig.align='center', fig.width=8, fig.height=6, message=FALSE}
 
 snps.in.both.sequencing.rounds = merged.df %>% 
   select(SNP, Sequencing_Round) %>% 
@@ -355,18 +355,18 @@ plotting.merged.df %>%
   filter(SNP %in% plot.snps) %>% 
   mutate(Grouping = paste(Mutation, Pair, Animal, sep = "-")) %>% 
   ggplot(aes(x = DPI, y = AF, col = Pair, group = Grouping)) +
-    geom_point(size = 1.5) + 
-    geom_line() + 
+    geom_point(size = 3, alpha = 0.5) + 
+    geom_line(alpha = 0.5) + 
     facet_wrap(~Mutation) + 
     xlab("Days Post Infection") + 
     ylab("Allele Frequency") + 
     scale_color_manual(values = c("#bd0000", "#0013bd", "#bd00ba")) + 
     scale_y_continuous(breaks = c(0, 0.5, 1)) + 
-    theme_bw() + 
+    theme_bw(16) + 
     theme(plot.title = element_text(hjust = 0.5)) +                                                               
-    theme(strip.text.x = element_text(size = 5)) + 
     theme(legend.position = "bottom")
   
+ggsave(paste(figures.dir, "variants-over-time-and-condition.png", sep=""), width = 8, height = 6)
 
 ```
 
