--- a/workflow/notebooks/analyze-genomic-coverage.Rmd
+++ b/workflow/notebooks/analyze-genomic-coverage.Rmd
@@ -217,4 +217,30 @@ ggsave(paste(figures.dir, "coverage_fail_by_DPI.png", sep=""), width = 4, height
 
 Aside from having generally lower template numbers than runs that pass our `r paste(min.frac, "% >= ", min.depth, "X coverage", sep="")` filter, these samples also tend to be collected a fairly long time after the initial infection. Again, this is expected single viral titres are likely to wane over time. 
 
+## Paper Figures
+
+Below is a supplemental figure for the paper that shows the depth for each sample included in the paper.
+
+```{r Supplemental Figure 1, fig.align='center', fig.width=12, fig.height=5}
+
+# Samples not included in the paper
+aerosol_direct_samples = sample.metadata.df %>% 
+  filter(Experiment %in% c(19)) %>% 
+  pull(Run) %>% 
+  unique()
+  
+
+trimmed.depth.df %>% 
+  # Remove the samples not included in the paper
+  filter(!Run %in% aerosol_direct_samples) %>% 
+  ggplot(aes(x = POS, y = log(DP), group = Run)) +
+    geom_line() + 
+    xlab("Position") + 
+    ylab("Log(Depth)") +
+    theme_bw(18) + 
+    theme(plot.title = element_text(hjust = 0.5))
+
+ggsave(paste(figures.dir, "supplemental-figure-1.png", sep=""), width = 12, height = 5)
+
+```
 
